--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,8 @@
 
         <title>Vue Prototype</title>
         
+        <link href="app.css" rel="stylesheet" />
+        
     </head>
     <body>
         <div id="app"></div>
